--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -240,117 +240,119 @@
   </div>
   <%# //Contact Us %>
 
-  <%# Follow Us %>
-  <%# [BACKEND] If no social media from centre, don't populate this section %>
-  <div class="divider divider--lrg">
-    <h2 id="follow-us">Follow Us</h2>
-    <div class="grid grid--mrg-dbl-non-palm">
-      <%# Facebook %>
-      <% if @centre.facebook.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--facebook icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              Facebook
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //Facebook %>
-
-      <%# Twitter %>
-      <% if @centre.twitter.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--twitter icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              Twitter
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //Twitter %>
-
-      <%# Instagram %>
-      <% if @centre.instagram.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--instagram icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              Instragram
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //Instagram %>
-
-      <%# Pinterest %>
-      <% if @centre.pinterest.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--pinterest icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              Pinterest
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //Pinterest %>
-    </div>
-
-    <div class="grid grid--mrg-dbl-non-palm">
-      <%# YouTube %>
-      <% if @centre.youtube.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--youtube icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              YouTube
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //YouTube %>
-
-      <%# Google+ %>
-      <% if @centre.google_plus.present? %>
-        <div class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
-            <div class="flag__image">
-              <div class="box islet">
-                <span class="icon icon--google-plus icon--dark" aria-hidden="true"></span>
-              </div>
-            </div>
-            <div class="flag__body">
-              Google Plus
-            </div>
-          </a>
-        </div>
-      <% end %>
-      <%# //Google+ %>
-    </div>
-  </div>
-  <%# //Follow Us %>
-
+  <%# Follow Us - title %>
+  <%# [BACKEND] If no social media from centre, don't title %>
+    <%# Need mrg-base spacing class as the :last-child on txt-formatted removed the margin %>
+    <h2 id="follow-us" class="mrg-base">Follow Us</h2>
+  <%# //Follow Us - title %>
 </div>
 <%# //Text formatted %>
+
+<%# Follow Us - list of social media %>
+<div class="divider">
+  <ul class="grid grid--mrg-base-non-palm txt-formatted__list-unstyled">
+    <%# Facebook %>
+    <% if @centre.facebook.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--facebook icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            Facebook
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //Facebook %>
+
+    <%# Twitter %>
+    <% if @centre.twitter.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--twitter icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            Twitter
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //Twitter %>
+
+    <%# Instagram %>
+    <% if @centre.instagram.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--instagram icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            Instragram
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //Instagram %>
+
+    <%# Pinterest %>
+    <% if @centre.pinterest.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--pinterest icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            Pinterest
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //Pinterest %>
+
+    <%# YouTube %>
+    <% if @centre.youtube.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--youtube icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            YouTube
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //YouTube %>
+
+    <%# Google+ %>
+    <% if @centre.google_plus.present? %>
+      <li class="grid__item one-half non-palm-one-quarter">
+        <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
+          <div class="flag__image">
+            <div class="box islet">
+              <span class="icon icon--google-plus icon--dark" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="flag__body">
+            Google Plus
+          </div>
+        </a>
+      </li>
+    <% end %>
+    <%# //Google+ %>
+  </ul>
+</div>
+<%# //Follow Us - list of social media %>
+
