--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -16,21 +16,29 @@
         <h2 class="stores-maps__filters-toggle__hdr">Stores A-Z</h2>
 
         <%# Filters %>
-        <%# [CHRIS TODO] need to add `aria-owns` to the 'Apply' button that points to the filters count %>
-        <!-- <div class="drop-down-menu drop-down-container">
-          <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-lrg" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full icon--flush-top btn--pointer__icon"></span></button>
-          <div class="drop-down-menu__target drop-down box" id="stores-filters">
+        <%#<div class="drop-down-menu drop-down-container">
+
+          <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
+
+          <div class="drop-down-menu__target drop-down box box--drop-down" id="stores-filters">
             <ul class="drop-down-menu__list">
-              <li><button class="btn btn--full btn--full-left">Women's Fashion</button></li>
-              <li><button class="btn btn--full btn--full-left">Shoes &amp; Footwear</button></li>
-              <li><button class="btn btn--full btn--full-left">Jewellery &amp; Watches</button></li>
-              <li><button class="btn btn--full btn--full-left">Bags &amp; Luggage</button></li>
-              <li><button class="btn btn--full btn--full-left">Computers &amp; Electronics</button></li>
-              <li><button class="btn btn--full btn--full-left">Movies &amp; Music</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Women's Fashion</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Shoes &amp; Footwear</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Jewellery &amp; Watches</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Bags &amp; Luggage</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Computers &amp; Electronics</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Movies &amp; Music</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Women's Fashion</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Shoes &amp; Footwear</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Jewellery &amp; Watches</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Bags &amp; Luggage</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Computers &amp; Electronics</button></li>
+              <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Movies &amp; Music</button></li>
             </ul>
           </div>
-        </div> -->
-        <%# Filters %>
+
+        </div>%>
+        <%# //Filters %>
 
         <%# List/map toggle %>
         <button class="stores-maps__toggle btn btn--main btn--main-alt4 btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map">
