More code review changes

--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -45,4 +45,4 @@
 }
 
 /* Box with small margin bottom */
-.box--mrg-btm-half {@include to-rem(margin-bottom, $spacing-half);}
+.box--mrg-half {@include to-rem(margin-bottom, $spacing-half);}
