Adding a conditional rule to Angular Cloak abstraction

--- a/app/assets/stylesheets/partials/abstractions/_angular-cloak.scss
+++ b/app/assets/stylesheets/partials/abstractions/_angular-cloak.scss
@@ -19,9 +19,12 @@
   display: block !important;
   opacity: 0;
 
-  /* Old IE */
-  .old-ie & {display: none !important;}
-
   /* JS off */
   .no-js & {opacity: 1;}
+
+  /* --Conditional overrides-- */
+
+  /* We don't want the pre-JS loaded UI state here as it loads in in an obtrusive way, also old IE doesn't support `opacity` (`filter` fallback does not work in this case) */
+  .header__primary .header__overlay &,
+  .old-ie & {display: none !important;}
 }
