--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -16,7 +16,7 @@
   .map-google-static {
     @include to-rem(margin-bottom, $spacing-sixth);
 
-    @include respond-min($non-palm) {
+    @include respond-min($lap-lrg) {
       margin-bottom: 0;
     }
   }
@@ -24,19 +24,17 @@
 
   /* The location box containing the img and the address */
   .centre-location__info {
-    @include respond-min($non-palm) {
+    /* Needs a tighter line-height than the default */
+    @include font-size(14, 1.4);
+
+    @include respond-min($lap-lrg) {
       @include to-rem(top, $spacing-half);
       @include to-rem(left, $spacing-half);
       position: absolute;
-      width: 200px;
-    }
-  }
-    /* The thumbnail photo of the shopping centre */
-    .centre-location__img {
-      // @include respond-min ($non-palm) {
-      //   @include to-rem(width, 200);
-      // }
+      width: 400px;
     }
 
     /* The address of the centre */
-    .centre-location__address {@include to-rem(margin-bottom, $spacing-sixth);}
+    p {@include to-rem(margin-bottom, $spacing-sixth);}
+  }
+  
