--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -25,13 +25,14 @@
   /* The location box containing the img and the address */
   .centre-location__info {
     /* Needs a tighter line-height than the default */
-    @include font-size(14, 1.4);
+    line-height: 1.4;
 
     @include respond-min($lap-lrg) {
       @include to-rem(top, $spacing-half);
       @include to-rem(left, $spacing-half);
       position: absolute;
-      width: 400px;
+      /* Restricts the width of the box so it doesn't go 100% */
+      @include to-rem(width, 340);
     }
 
     /* The address of the centre */
