--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -77,10 +77,18 @@
     <div class="box slats centre-location__info">
       <div class="slats__img slats__img--compact">
         <%# [BACKEND] Make `alt` attr dynamic where indicated %>
-        <img src="http://placehold.it/150x125&text=image" alt="Photo of [dynamic] shopping centre">
+        <img src="http://placehold.it/120x130&text=image" alt="Photo of [dynamic] shopping centre">
       </div>
       <div class="slats__body islet">
-        <p><%= @centre.street_address %> <br>[Suburb] <br><%= @centre.state %> <%= @centre.postcode %></p>
+        <p itemscope itemtype="http://schema.org/Organization">
+          <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <span itemprop="streetAddress"> Cnr Narre Warren Cranbourne Rd &amp; Littlecroft Ave</span>
+            <br>
+            <span itemprop="addressLocality">Narre Warren</span>
+            <br>
+            <span itemprop="addressRegion"><%= @centre.state %> <%= @centre.postcode %></span>
+          </span>
+        </p>
         <a href="#">Open in Google Maps <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
       </div>
     </div>
